added on api-gateway: parameter validation, basic auth